# rabbitui

./: .gitignore  .markdownlint-cli2.yaml  BREAKING-CHANGES.md  Cargo.toml  DESIGN.md  README.md  RELEASE-CHECKLIST.md  ROADMAP.md  justfile  publish.sh
.github/workflows/: ci.yml  perf-budgets.yml  release.yml  tapes.yml
comparisons/rabbitui/: Cargo.toml  README.md
comparisons/rabbitui/examples/: scale.rs
comparisons/rabbitui/src/: main.rs
conformance/: .markdownlint-cli2.yaml  Cargo.toml  README.md  results-matrix.md
conformance/examples/: gen_matrix.rs
conformance/src/: corpus.rs  escape.rs  lib.rs  matrix.rs  model.rs  runner.rs
conformance/tests/: corpus.rs
docs/: field-report-fable.md  field-report.md  inline-mode-spec.md  terminal-gap-analysis.md
docs/adr/: 0001-programming-model.md  0002-widget-identity.md  0003-rendering.md  0004-layout.md  0005-concurrency-event-loop.md  0006-input-focus-events.md  0007-styling-theming.md  0008-widget-contract.md  0009-testing.md  0010-ratatui-interop.md  0011-crate-layout.md  0012-terminal-substrate.md  0013-screen-modes.md  0014-positioning.md  0015-naming.md  README.md
docs/design/: accessibility.md  arc2a-gallery.md  arc2a-role-audit.md  arc2b-measurement-scroll.md  arc3-slice1-agent-extraction.md  arc3-slice4-tools.md  core-model-and-roadmap.md  dogfood-findings.md  error-story.md  fakedevice-e2e-harness.md  keybinding-conventions.md  middle-piece-audit.md  render-space.md  slice3-input-design.md  slice4-widgets-theming.md  slice5-inline-vt100.md  slice6-effects.md  slice7-overlays-mouse.md  slice8-agent-chrome.md  transparent-paint-composition.md
docs/plans/: 00-execution-playbook.md  arc2a-aesthetics.md  arc3-agent-client.md  arc4-spine.md  arc5-field.md  wave-a-trait-app.md  wave-b1-flagship-e2e.md  wave-b2-virtualization.md  wave-c-forms-catalog.md  wave-d-qwertty-adoption.md  wave-g-archetype-showcase.md
docs/research/: brick.md  bubbletea.md  codex-tui2.md  cursive.md  ink.md  libvaxis.md  opentui.md  prior-art.md  ratatui.md  recent-rust-tui-wave.md  rust-gui-lessons.md  terminal-substrate.md  textual.md  tui-framework-field-report-2026.md
docs/substrate/: README.md  substrate-requirements.md  substrate-status.md
docs/upstream-issues/: README.md  inline-live-region-primitive.md  scroll-region-decoupling.md  synchronized-output-edge-cases.md
rabbitui/: Cargo.toml  README.md
rabbitui-agent/: Cargo.toml  LICENSE-MIT  README.md
rabbitui-agent/src/: app.rs  demo.rs  keymap.rs  lib.rs  main.rs  markdown.rs  session.rs  tools.rs  transcript.rs
rabbitui-agent/src/backend/: anthropic.rs  mod.rs  replay.rs  sse.rs
rabbitui-agent/tests/: e2e.rs  slice1.rs  slice4.rs  slice5.rs
rabbitui-agent/tests/fixtures/: greeting.jsonl  tool_turn.jsonl  tool_use.jsonl
rabbitui-agent/themes/: example.toml
rabbitui-core/: Cargo.toml  README.md
rabbitui-core/benches/: core.rs
rabbitui-core/src/: a11y.rs  accessibility.rs  buffer.rs  commit.rs  facts.rs  frame.rs  geometry.rs  id.rs  input.rs  keymap.rs  layout.rs  lib.rs  log.rs  mode.rs  outcome.rs  pending.rs  routing.rs  scroll.rs  spacing.rs  store.rs  style.rs  text.rs  theme.rs  widget.rs
rabbitui-core/tests/: bench_smoke.rs
rabbitui-ratatui/: Cargo.toml  README.md
rabbitui-ratatui/examples/: ratatui_interop.rs
rabbitui-ratatui/src/: adapter.rs  bridge.rs  lib.rs  style.rs
rabbitui-ratatui/tests/: bridge_snapshots.rs
rabbitui-ratatui/tests/snapshots/: bordered_block.txt  gauge.txt
rabbitui-testing/: Cargo.toml  README.md
rabbitui-testing/src/: lib.rs  snapshot.rs  vt.rs
rabbitui-testing/tests/: driver.rs  routing.rs
rabbitui-testing/tests/snapshots/: counter_view.txt
rabbitui-widgets/: Cargo.toml  README.md
rabbitui-widgets/src/: button.rs  collapsible.rs  error_banner.rs  facts_inspector.rs  form.rs  help_overlay.rs  lib.rs  log_overlay.rs  panel.rs  selection_list.rs  table.rs  text.rs  text_input.rs  text_util.rs
rabbitui-widgets/tests/: a11y_facts.rs  accessibility_facts.rs  text_snapshot.rs  widget_snapshots.rs
rabbitui-widgets/tests/snapshots/: collapsible_collapsed.txt  collapsible_expanded_focused.txt  panel_borderless.txt  panel_titled_focused.txt  selection_list_focused.txt  selection_list_unfocused.txt  text_input_focused.txt  text_input_unfocused.txt  text_multi_line.txt  text_soft_wrap.txt
rabbitui/benches/: frame.rs  frame_iai.rs
rabbitui/examples/: agent.rs  counter.rs  fetch.rs  focus.rs  form.rs  gallery.rs  hello.rs  smoke.rs  stream.rs  todo.rs
rabbitui/src/: app.rs  effect.rs  encode.rs  harness.rs  input.rs  lib.rs  log.rs  render.rs  terminal.rs  theme.rs
rabbitui/src/engine/: alt.rs  inline.rs  mod.rs
rabbitui/tests/: agent_flow.rs  e2e_headless.rs  effect_panic_restore.rs  frame_bench_smoke.rs  inline_vt.rs  set_theme.rs  todo_flow.rs
skills/rabbitui/: SKILL.md  design-note.md  evals.md
tapes/: agent.tape  counter.tape  fetch.tape  focus.tape  form.tape  gallery-catppuccin.tape  gallery-dark.tape  gallery-dracula.tape  gallery-nord.tape  hello.tape  ratatui_interop.tape  stream.tape  todo.tape
