[workspace]
resolver = "3"
members = [
    "rabbitui",
    "rabbitui-agent",
    "rabbitui-core",
    "rabbitui-ratatui",
    "rabbitui-testing",
    "rabbitui-widgets",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/rabbitui"

[workspace.dependencies]
rabbitui-core = { path = "rabbitui-core", version = "0.1.0" }
rabbitui = { path = "rabbitui", version = "0.1.0" }
rabbitui-widgets = { path = "rabbitui-widgets", version = "0.1.0" }
rabbitui-testing = { path = "rabbitui-testing", version = "0.1.0" }
# Path dependency during development; switches to a git (then crates.io) dependency
# when qwertty publishes. See docs/adr/0012-terminal-substrate.md.
#
# Points at qwertty's `work/default` jj workspace — the tree qwertty keeps pinned
# to its last *sealed, green* change — not the bare checkout (its actively-churning
# dev working tree, which is often mid-slice and may not compile). This is the
# intended downstream consumption path during qwertty's active development, and it
# is what keeps our build stable against their churn (their 2026-07-07 guidance).
qwertty = { path = "../../../qwertty/work/default", features = ["tokio"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync", "time"] }
futures-core = { version = "0.3", default-features = false }
# The flagship agent client (rabbitui-agent) adapts the backend's event stream
# into the app's message type; `std` gives StreamExt combinators without pulling
# the executor/io stack. Slice 2's SSE parsing reuses it.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# Agent client: transcript persistence and replay-fixture (de)serialization.
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# Agent client: markdown → styled spans (app-land, as in the slice-8 example).
pulldown-cmark = { version = "0.12", default-features = false }
# Agent client (slice 2): the Anthropic wire. rustls-tls avoids an OpenSSL system
# dependency; `stream` gives the SSE byte stream; `json` builds the request body.
# default-features = false drops the default native-tls/cookies/etc. stack.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rustix = { version = "1", default-features = false, features = ["std", "termios"] }
unicode-segmentation = "1.12"
unicode-width = "0.2"
toml = { version = "0.8", default-features = false, features = ["parse"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
# `env-filter` gives RABBITUI_LOG / RUST_LOG parsing; `fmt` is not pulled — the
# Collector formats events itself into the ring and only writes stderr on close.
# Default features are trimmed per the publish checklist's default-features-false rule.
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "registry", "env-filter"] }
# Benchmark harness (Arc 2B). Dev-dependency only; `default-features = false`
# drops the optional `rayon`/plotting stack we do not use (no HTML reports).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
