[package]
name = "rabbitui-agent"
description = "A terminal chat/agent client built on rabbitui — the framework's permanent acceptance test."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

# A binary plus a library: the library holds the app, backend, and transcript so
# the headless TestApp tests can drive them; the binary is the thin `main`.
[lib]
name = "rabbitui_agent"

[[bin]]
name = "rabbit"
path = "src/main.rs"

[dependencies]
rabbitui.workspace = true
rabbitui-core.workspace = true
rabbitui-widgets.workspace = true
tokio.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
reqwest.workspace = true

[dev-dependencies]
rabbitui-testing.workspace = true
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
