[package]
name = "rabbitui-core"
description = "Core types for the rabbitui terminal UI framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "core"
harness = false

[lints]
workspace = true
