[package]
name = "rabbitui-testing"
description = "Headless test harness for rabbitui applications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rabbitui-core.workspace = true

[dev-dependencies]
rabbitui-widgets.workspace = true

[lints]
workspace = true
