[package]
name = "rabbitui-widgets"
description = "The built-in widget catalog for the rabbitui terminal UI framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rabbitui-core.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[features]
# Gates the `LogOverlay` widget so its presence matches the facade's `tracing`
# feature (on by default there). The widget itself pulls in no new dependency —
# it reads the *core* `LogHandle`, keeping `tracing` out of this crate (ADR 0011).
# On by default so the default catalog includes the overlay.
default = ["tracing", "devtools"]
tracing = []
# Gates the `FactsInspector` overlay (ADR arc4 §7). Turns on
# `rabbitui-core/devtools` so the `id → name` side table and `dump_lines` the
# inspector renders exist. On by default, matching the facade's `devtools`; a
# release catalog drops it (and the name capture) with `--no-default-features`.
devtools = ["rabbitui-core/devtools"]

[dev-dependencies]
rabbitui-testing.workspace = true

[lints]
workspace = true
