[package]
name = "rabbitui"
description = "A terminal user interface framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rabbitui-core.workspace = true
qwertty.workspace = true
rustix.workspace = true
tokio.workspace = true
futures-core.workspace = true
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
rabbitui-widgets.workspace = true
rabbitui-testing.workspace = true
# `test-util` gives the Effects unit tests a paused clock so timeout/stream
# timing is deterministic; `rt-multi-thread` lets a `#[tokio::test]` spawn effect
# tasks. Dev-only: the facade itself needs neither.
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
# Markdown parsing for the agent-chrome flagship example (slice 8). App-land
# rendering: markdown → spans lives in the example, not the framework, so the
# framework's dependency budget is untouched (`docs/design/slice8-agent-chrome.md`).
pulldown-cmark = { version = "0.12", default-features = false }
# Benchmark harness (Arc 2B): the full declared-frame benches live here.
criterion = { workspace = true }

[[bench]]
name = "frame"
harness = false

[features]
default = ["themes", "tracing"]
# TOML theme-file loading and debug-build hot reload. On by default; disabling it
# drops the `toml` dependency and the `theme` module (ADR 0007: file loading lives
# in the facade, core stays dep-free).
themes = ["dep:toml"]
# `tracing` integration: the `log` module's Collector (a tracing_subscriber Layer)
# and `App::tracing`, which installs it as the global default. On by default;
# disabling it drops the `tracing`/`tracing-subscriber` dependencies and the `log`
# module (the logging seam, `docs/design/arc2b-measurement-scroll.md`). The widget
# side (`LogOverlay`) is gated by rabbitui-widgets' matching `tracing` feature but
# depends only on the core handle, so it never pulls `tracing` in.
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[lints]
workspace = true
