[package]
name = "rabbitui"
description = "A terminal UI framework for Rust (early development; this release reserves the crate name)"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
